force-app/main/default/objects/ppmail__Mail_Service__mdt/ppmail__Mail_Service__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata type is used to define the available mail service providers, such as SendGrid or Mailgun. It allows for a centralized and extensible way to manage the mail services that can be used by the application.</description>
    <label>Mail Service</label>
    <pluralLabel>Mail Services</pluralLabel>
</CustomObject>