force-app/main/default/objects/ppmail__Mail_Service__mdt/fields/ppmail__Active__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the mail service is currently active and can be used to send emails.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>