force-app/main/default/objects/ppmail__Mail_Service__mdt/fields/ppmail__Default__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the service is default for all sending.</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>