force-app/main/default/objects/ppmail__Mail_Service__mdt/fields/ppmail__Default_Reply_To__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Default_Reply_To__c</fullName>
    <label>(Deprecated) Default Reply To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>