force-app/main/default/objects/ppmail__Mail_Service__mdt/fields/ppmail__From__c.field-meta.xml
<CustomField>
    <fullName>ppmail__From__c</fullName>
    <label>(Deprecated) From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>