force-app/main/default/objects/ppmail__Mail_Service__mdt/fields/ppmail__Is_EU__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Is_EU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the mail service is located in the European Union. This can be important for data privacy and compliance reasons.</description>
    <label>Is EU</label>
    <type>Checkbox</type>
</CustomField>