force-app/main/default/objects/ppmail__Mail_Service__mdt/fields/ppmail__Setup_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Setup_Display_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Controls the display order of the provider in the Setup Assistant nav. Lower numbers appear first.</description>
    <label>Setup Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>