force-app/main/default/objects/ppmail__Mail_Service__mdt/fields/ppmail__Setup_UI_Ready__c.field-meta.xml
<CustomField>
    <fullName>ppmail__Setup_UI_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the provider has implemented Setup Assistant LWCs and should appear in the nav.</description>
    <label>Setup UI Ready</label>
    <type>Checkbox</type>
</CustomField>